sales report download (admin) and context porcessors (cart-count)

--- a/ecom/templates/admin/admhome.html
+++ b/ecom/templates/admin/admhome.html
@@ -99,7 +99,7 @@
       <div class="card p-4">
         <h4 class="mb-4">Sales Report</h4>
   
-        <form method="post" action="/admhome/">
+        <form method="post" action="/sales_report/">
           {% if messages %}
               {% for message in messages %}
                 <h5 class=" text-danger text-center"> {{ message }} </h5>
