--- a/ecom/templates/profile/user_details.html
+++ b/ecom/templates/profile/user_details.html
@@ -91,7 +91,12 @@
           <a href="/edit_profile/{{username.id}}" class="edit-profile-btn px-3" type="button">Edit Profile</a> <br>
       </div>
         <div class="p-3  text-center"><a href="/reset_password/" class="text-danger">Reset password</a></div>
-        <span style="font-size: 30px; color: #008448;">Wallet balance: {{wallet.amount}} </span>
+        <span style="font-size: 30px; color: #006538;">Wallet balance: {{wallet.amount}} </span> <br>
+        <div class=" border border-dark p-2">
+        <span  style="font-size: 20px; color: #1d0056;"> Referal Code = <b> {{username.referal_code}} </b> </span> <br>
+          Refer a friend and both of you win! You'll get ₹500 wallet cash for every new user you refer, and they'll get ₹100 just for using your code to sign up.
+          <br>
+      </div>
     </div>
 
     <!-- Address section -->
