--- a/ecom/templates/admin/adminbase.html
+++ b/ecom/templates/admin/adminbase.html
@@ -372,7 +372,7 @@ a[href*="#contact"]::before {
        <li><a href="/view_products/" class="pro"> Products </a> </li>  
        <li><a href="/viewbrand/" class="cat">Categories</a></li>  
        <li><a href="/admorders/" class="ord"> Orders </a> </li>  
-      <li><a href="/admreturns/" class="ret">Returns</a></li>  
+      <li><a href="/view_returns/" class="ret">Returns</a></li>  
       <li><a href="/view_coupon/" class="coup">Coupons</a></li>  
       <li><a href="/view_brand_offers/" class="ban">Offers</a></li>  
       <li><a href="/admlogout/" class="logou">Logout</a></li>  
