--- a/ecom/templates/cart/confirm.html
+++ b/ecom/templates/cart/confirm.html
@@ -87,7 +87,7 @@
             </table>
           </div>
           <div class="text-center pb-4 mb-4">
-      <a href="/order_history/" style=" width: 120px;  background-color: #dbcc8f; border:1px solid rgb(0, 0, 0)  "
+      <a href="/order_history_items/{{orders.id}}" style=" width: 120px;  background-color: #dbcc8f; border:1px solid rgb(0, 0, 0)  "
       class="py-3 text-dark px-4  ">
       Track Order</a>
 
